# ceceio

./: Cargo.toml  README.md  example.cec
.github/workflows/: build-and-test.yml
src/: ast.rs  cheap_clone.rs  check.rs  error.rs  evaluatable.rs  evaluator.rs  expression.rs  interner.rs  interpreter.rs  lib.rs  main.rs  parser.rs  scope.rs  small_string.rs
src/check/: type_info.rs
src/expression/: builtin.rs  elements.rs
src/expression/elements/: lambda.rs
src/parser/: atom.rs  expression.rs
