[package]
name = "ceceio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argv = "0.1.6"
indexmap = "1.9.1"
nom = "7.1.1"
rustc-hash = "1.1.0"
slicedisplay = "0.2.1"
thiserror = "1.0.32"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
